--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,8 @@ dependencies {
     //Card View
     implementation 'androidx.cardview:cardview:1.0.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
 
 }
