--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    // Circular Image
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+
 
 }
